--- a/1.html
+++ b/1.html
@@ -2,6 +2,16 @@
 <!doctype html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169642499-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-169642499-1');
+</script>
+
   <title> WEB1 - welcome </title>
   <meta charset="utf-8">
 </head>
@@ -30,7 +40,7 @@ topmargin="90"> 어디한번보자
 src="https://www.youtube.com/embed/7T7r_oSp0SE"
 frameborder="0" allow="accelerometer; autoplay; encrypted-media;
 gyroscope; picture-in-picture" allowfullscreen></iframe>
- 
+
  <div id="disqus_thread"></div>
  <script>
 
